# llm-gateway

./: .env.template  .gitignore  Cargo.toml  QUICKSTART.en.md  QUICKSTART.md  QUICKSTART.zh.md  README.en.md  README.md  README.zh.md  config.yaml  config.yaml.example  package.json
.github/workflows/: rust.yml
examples/: test_gateway.sh
lib/: resolve-binary.js
scripts/: prepare-platform-packages.js
src/: auth.rs  guard.rs  logging.rs  main.rs  metrics.rs  router.rs
src/config/: mod.rs
src/dispatcher/: service.rs
src/mapper/: request.rs  response.rs
src/types/: error.rs  mod.rs  provider.rs  stream.rs
