[package]
name = "llm-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP/Server
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
axum = "0.8"
tokio = { version = "1.45", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
bytes = "1.10"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"

# Streaming
reqwest-eventsource = "0.6"

# Configuration
config = "0.15"
dotenvy = "0.15"

# Async utilities
async-trait = "0.1"

# URL parsing
url = "2.5"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
