[package]
name = "llm-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP/Server
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
axum = "0.8"
tokio = { version = "1.45", features = ["rt-multi-thread", "net", "time", "macros", "sync", "io-util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
bytes = "1.10"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"

# Configuration
dotenvy = "0.15"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
